Updated succesful run

--- a/HW1_RSA.ipynb
+++ b/HW1_RSA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "18297b95be47e6ce",
    "metadata": {
     "ExecuteTime": {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c33f4060872b2af5",
    "metadata": {
     "ExecuteTime": {
@@ -114,16 +114,7 @@
     },
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "18:43:18 - cmdstanpy - INFO - compiling stan file C:\\Users\\User\\Proton Drive\\maa_ng0h\\My files\\C. Work\\2E Modeling Communication and Abstraction\\Environment\\HW1\\Studyproject_HW1\\stan\\vanilla_rsa.stan to exe file C:\\Users\\User\\Proton Drive\\maa_ng0h\\My files\\C. Work\\2E Modeling Communication and Abstraction\\Environment\\HW1\\Studyproject_HW1\\stan\\vanilla_rsa.exe\n",
-      "18:45:31 - cmdstanpy - INFO - compiled model executable: C:\\Users\\User\\Proton Drive\\maa_ng0h\\My files\\C. Work\\2E Modeling Communication and Abstraction\\Environment\\HW1\\Studyproject_HW1\\stan\\vanilla_rsa.exe\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# compile model\n",
     "stan_file = os.path.join('stan', 'vanilla_rsa.stan')\n",
@@ -132,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "65e682e5eca56c67",
    "metadata": {
     "ExecuteTime": {
@@ -143,14 +134,147 @@
    },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'big_red'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 31\u001b[39m\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# cost function\u001b[39;00m\n\u001b[32m     25\u001b[39m cost_dict = {\n\u001b[32m     26\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mbig\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m0.0\u001b[39m,\n\u001b[32m     27\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33msmall\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m0.0\u001b[39m,\n\u001b[32m     28\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mblue\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m0.0\u001b[39m,\n\u001b[32m     29\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mred\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m0.0\u001b[39m,\n\u001b[32m     30\u001b[39m }\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m default_cost = np.array([\u001b[43mcost_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mutterance\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m utterance \u001b[38;5;129;01min\u001b[39;00m utterances])\n\u001b[32m     33\u001b[39m \u001b[38;5;66;03m# new cost functions\u001b[39;00m\n\u001b[32m     34\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcost_by_letters\u001b[39m(utterance, per_letter=\u001b[32m0.1\u001b[39m):\n",
-      "\u001b[31mKeyError\u001b[39m: 'big_red'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "18:50:34 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "18:50:34 - cmdstanpy - INFO - Chain [1] done processing\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chain [1] method = sample (Default)\n",
+      "Chain [1] sample\n",
+      "Chain [1] num_samples = 1\n",
+      "Chain [1] num_warmup = 0\n",
+      "Chain [1] save_warmup = 0 (Default)\n",
+      "Chain [1] thin = 1 (Default)\n",
+      "Chain [1] adapt\n",
+      "Chain [1] engaged = 0\n",
+      "Chain [1] gamma = 0.050000000000000003 (Default)\n",
+      "Chain [1] delta = 0.80000000000000004 (Default)\n",
+      "Chain [1] kappa = 0.75 (Default)\n",
+      "Chain [1] t0 = 10 (Default)\n",
+      "Chain [1] init_buffer = 75 (Default)\n",
+      "Chain [1] term_buffer = 50 (Default)\n",
+      "Chain [1] window = 25 (Default)\n",
+      "Chain [1] algorithm = hmc (Default)\n",
+      "Chain [1] hmc\n",
+      "Chain [1] engine = nuts (Default)\n",
+      "Chain [1] nuts\n",
+      "Chain [1] max_depth = 10 (Default)\n",
+      "Chain [1] metric = diag_e (Default)\n",
+      "Chain [1] metric_file =  (Default)\n",
+      "Chain [1] stepsize = 1 (Default)\n",
+      "Chain [1] stepsize_jitter = 0 (Default)\n",
+      "Chain [1] num_chains = 1 (Default)\n",
+      "Chain [1] id = 1 (Default)\n",
+      "Chain [1] data\n",
+      "Chain [1] file = C:\\Users\\User\\AppData\\Local\\Temp\\tmp74p4twfa\\9sxxpvnv.json\n",
+      "Chain [1] init = 2 (Default)\n",
+      "Chain [1] random\n",
+      "Chain [1] seed = 13698\n",
+      "Chain [1] output\n",
+      "Chain [1] file = C:\\Users\\User\\AppData\\Local\\Temp\\tmp74p4twfa\\vanilla_rsa8nhjx8_c\\vanilla_rsa-20251118185034.csv\n",
+      "Chain [1] diagnostic_file =  (Default)\n",
+      "Chain [1] refresh = 100 (Default)\n",
+      "Chain [1] sig_figs = -1 (Default)\n",
+      "Chain [1] profile_file = profile.csv (Default)\n",
+      "Chain [1] num_threads = 1 (Default)\n",
+      "Chain [1] \n",
+      "Chain [1] Model contains no parameters, running fixed_param sampler, no updates to Markov chain\n",
+      "Chain [1] Iteration: 1 / 1 [100%]  (Sampling)\n",
+      "Chain [1] \n",
+      "Chain [1] Elapsed Time: 0 seconds (Warm-up)\n",
+      "Chain [1] 0 seconds (Sampling)\n",
+      "Chain [1] 0 seconds (Total)\n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n",
+      "Chain [1] \n"
      ]
     }
    ],
@@ -212,12 +336,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b0b0f71db90a544a",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L0:\n",
+      "            big_blue  big_red  small_blue\n",
+      "big             0.50     0.50        0.00\n",
+      "small           0.00     0.00        1.00\n",
+      "blue            0.50     0.00        0.50\n",
+      "red             0.00     1.00        0.00\n",
+      "big_red         0.00     1.00        0.00\n",
+      "big_blue        1.00     0.00        0.00\n",
+      "small_blue      0.00     0.00        1.00\n",
+      "S1:\n",
+      "            big  small  blue  red  big_red  big_blue  small_blue\n",
+      "big_blue   0.25   0.00  0.25 0.00     0.00      0.50        0.00\n",
+      "big_red    0.20   0.00  0.00 0.40     0.40      0.00        0.00\n",
+      "small_blue 0.00   0.40  0.20 0.00     0.00      0.00        0.40\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "L0_draws = fit.stan_variable('L0')\n",
