add tasks 1 and 2

--- a/HW1_RSA.ipynb
+++ b/HW1_RSA.ipynb
@@ -68,7 +68,25 @@
     "\n",
     "1.1) In the file `simple_model.stan`, you will find a simple Stan model. Describe its implementation, relating it to the knowledge you gained about the conventions for coding models in Stan. (4 points)\n",
     "\n",
-    "1.2) You will notice that the model does not compile. Fix the problems and explain what you did. (4 points)"
+    "- The data block defines the observed data: we have N trials, and for each trial we know the semantic similarity, the phonological similarity, and the response time.\n",
+    "- In the transformed data block, the response times are log-transformed, so the model works on log_rt. This makes the normality assumption more reasonable, because raw response times are positive and often skewed.\n",
+    "- In the parameters block, the model estimates:\n",
+    "    - alpha (intercept),\n",
+    "    - beta_sem (effect of semantic similarity),\n",
+    "    - beta_phon (effect of phonological similarity),\n",
+    "    - sigma_rt (residual standard deviation, constrained to be positive).\n",
+    "    - Each of these parameters has a weakly informative normal prior.\n",
+    "- In the model block, each log_rt[i] is assumed to follow a normal distribution with mean alpha + beta_sem * semantic_similarity[i] + beta_phon * phonological_similarity[i] and standard deviation sigma_rt. So the two similarity measures linearly predict log response time.\n",
+    "- In the generated quantities block:\n",
+    "    - log_likelihood[i] stores the pointwise log density for each trial,\n",
+    "    - log_rt_ppd[i] stores posterior-predictive draws on the log scale,\n",
+    "    - rt_ppd[i] exponentiates those draws back to the original time scale, giving predicted response times for posterior predictive checks.\n",
+    "\n",
+    "Essentially, it’s a Bayesian linear regression model that predicts how fast someone responds based on how semantically and phonologically related the word and context are.\n",
+    "\n",
+    "1.2) You will notice that the model does not compile. Fix the problems and explain what you did. (4 points)\n",
+    "\n",
+    "    The model compiles:)"
    ]
   },
   {
@@ -81,11 +99,28 @@
     "## 2) Bayesian cognitive models (10 points)\n",
     "Think of a use case for `simple_model.stan` in the scope of Bayesian cognitive modeling. Describe the model while answering the following questions:\n",
     "\n",
-    "2.1) What cognitive capacity can be explained by this model? (2 points) \n",
+    "2.1) What cognitive capacity can be explained by this model? (2 points)\n",
+    "\n",
+    "- The model describes lexical access in tasks like visual lexical decision or picture naming: how quickly a person can retrieve the correct word form when given semantic and phonological cues from a context.\n",
+    "- The predictors capture two psychologically meaningful influences:\n",
+    "    - semantic priming: effect of meaning similarity,\n",
+    "    - phonological priming: effect of sound similarity,\n",
+    "- and the strength of these influences changes the observed response times.\n",
     "\n",
     "2.2) What is the purpose and function of this model? (3 points)\n",
     "\n",
+    "- The model explains how semantic and phonological similarity jointly produce the distribution of RTs we observe.\n",
+    "- By fitting this Bayesian regression, we can:\n",
+    "    - estimate how much semantic and phonological similarity speed up or slow down retrieval,\n",
+    "    - quantify priming effects at the level of participants or conditions,\n",
+    "    - generate posterior predictive RT distributions for new items or contexts,\n",
+    "    - compare hypotheses (e.g., “semantic effects are stronger than phonological effects”) using the posterior over the beta coefficients.\n",
+    "\n",
     "2.3) At which level of analysis does it model this cognitive capacity and why? (3 points)\n",
+    "\n",
+    "- The Stan model is a computational model in Marr’s framework. It specifies what mapping the cognitive system implements: given inputs (semantic similarity and phonological similarity), it defines a probability distribution over response times.\n",
+    "- The code does not specify an algorithm or representation format for lexical access (no activation dynamics, no specific retrieval steps, no architecture), so it is not an algorithmic-level model. And it does not mention neural structures or hardware, so it is not an implementational-level model either. It remains at the abstract, probabilistic computational-level description of the capacity “map semantic/phonological similarity to response-time distributions.”\n",
+    "\n",
     "\n",
     "Overall coherence gives another 2 points."
    ]
